# tool

./: .gitignore  README.md  feedback.md  pull_request_template.md  pyproject.toml  requirements.txt  run_tests.py  yml_test_file.yml
.fleet/: settings.json
.github/workflows/: black.yml  metric-tests.yml  test-coverage.yml  test.yml
byoqm/: __init__.py  build_treesitter.py  main.html  main.py  plugin.py  runner.py  source_cart.py
byoqm/dashboard/: dashboard.py  figure.py  test_dashboard.py
byoqm/metric/: metric.py  result.py  violation.py
byoqm/models/: code_climate.py
byoqm/qm_parser/: __init__.py  parser.py  yml_parser.py
byoqm/qualitymodel/: __init__.py  qualitymodel.py  treequalitymodel.py
byoqm/runner/: runner.py  test_runner.py
byoqm/source_coordinator/: languages.py  query_translations.py  source_coordinator.py  test_source_coordinator.py
byoqm/source_repository/: languages.py  query_translations.py  source_repository.py  test_source_coordinator.py  test_source_repository.py
byoqm/util/: .ignore_endings.txt  .ignore_extensions.txt  .ignore_paths.txt
byoqm/visuals/: dashboard.py  line.py  pie.py  test_dashboard.py
byoqm/writer/: test_writer.py  writer.py
core/: main.py
core/dashboard/: dashboard.py  test_dashboard.py
core/metric/: metric.py  result.py  violation.py
core/runner/: runner.py  test_runner.py
documentation/: architecture.md  build.py  creating_a_model.md  creating_an_aggregation_formula.md  mkdocs.yml
figures/: horizontal.py  line.py
metrics/: LOC.py  MethodArguments.sh  argument_count.py  argument_count2.py  breaks_in_linear_flow.py  code_size.py  cognitive_complexity.py  complex_logic.py  file_length.py  file_lines.py  identical_codeblocks.py  method_count.py  method_length.py  nested_controlflows.py  recursion.py  return_statements.py  similar_codeblocks.py
models/: code_climate.py  no_cpd.py  test.yml  tester_model.py
modu/: main.html  main.py
output/: 2023-02-22.csv
(+123 files in other folders)
