[tool.poetry]
name = "byoqm"
version = "0.1.0"
description = "Prototyping a Quality Assessment Tool with Parameterized Quality Models"
authors = ["Christoffer Gram <chkg@itu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bokeh = "^3.0.3"
tree-sitter = "^0.20.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
