[tool.poetry]
name = "byoqm"
version = "0.1.0"
description = "Prototyping a Quality Assessment Tool with Parameterized Quality Models"
authors = ["Caspar Marschall <cafm@itu.dk>", "Christoffer Gram <chkg@itu.dk>", "Frederik Rothe <frot@itu.dk>", "Jakob Lyngsie Hjalgrim <jlhj@itu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bokeh = "^3.0.3"
tree-sitter = "^0.20.1"
defusedxml = "^0.7.1"
click = "^8.1.3"
chardet = "^5.1.0"
mkdocs = "^1.4.2"

[tool.poetry.scripts]
main="byoqm.main:load"
test="metrics.test.test_all:run"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
